other-vpol/restrict-usergroup-fsgroup-id/.kyverno-test-exceptions/exceptions.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: user-id-exception
  namespace: policy-exceptions
spec:
  policyRefs:
  - kind: ValidatingPolicy
    name: validate-userid-groupid-fsgroup
  matchConditions:
  - name: exact-resource
    expression: request.name == 'badpod01'
  - name: target-namespace
    expression: request.namespace == 'default'
  allowedValues:
  - runAsUser:2000
