other-vpol/restrict-usergroup-fsgroup-id/.kyverno-test-exceptions/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod
  namespace: default
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
  containers:
  - name: busy
    image: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: default
spec:
  securityContext:
    runAsUser: 2000
    runAsGroup: 3000
    fsGroup: 2000
  containers:
  - name: busy
    image: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
  namespace: default
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 1000
  containers:
  - name: busy
    image: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod03
  namespace: default
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 4000
    fsGroup: 1000
  containers:
  - name: busy
    image: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod04
  namespace: default
spec:
  securityContext: {}
  containers:
  - name: busy
    image: busybox
